datatable scroll issues and removed seconds from app time in appointment module

--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -428,7 +428,7 @@
         //var d1 = new Date(appDate.ToString());
         //var d2 = new Date(today.ToString());
         //alert(new Date(today) > new Date(appDate));
-        if (new Date(today) > new Date(appDate))
+        if (today > appDate)
         {
             //alert('previous date app reschedule');
             $('#fetchdate').val(today);
