--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -14,7 +14,7 @@
 else
 {
 
-    <table id="datatablepending" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="datatablepending" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
         <thead>
             <tr class="headings">
                 <th class="column-title" style="text-align:center">Doctor's Name </th>
@@ -58,7 +58,7 @@ else
                                     <span class="caret"></span>
                                 </button>
 
-                                <ul class="dropdown-menu dropdown-menu-right">
+                                <ul class="dropdown-menu dropdown-menu-left">
                                     @*<li><a href='#' data-toggle="modal" class="thumbnail-col-inner"  data-id="@item.doctorID" id="@item.appID" data-target="#myModal4"
                                         data-todo='{"appID":"@item.appID","appDateTime":"@item.appDate@item.appTime","rov":"@item.rov","chiefComplaints":"@item.chiefComplaints","amount":"@item.paymentAmount","pharmacy":"@item.pharmacy"
                                         ,"cellPhone":"@item.cellphone"}'>View Detail</a></li>*@
@@ -82,31 +82,8 @@ else
 <script>
       $(document).ready(function() {
                
-        $('#datatablepending').dataTable({
-            'order': [[1, 'desc']],
-            columnDefs: [
-              { type: 'date-dd-mmm-yyyy', targets: 1 }
-            ]
-        });
-        $('#datatable-keytable').DataTable({
-          keys: true
-        });
-
-        $('#datatable-responsive').DataTable();
-
-        $('#datatable-scroller').DataTable({
-          ajax: "js/datatables/json/scroller-demo.json",
-          deferRender: true,
-          scrollY: 380,
-          scrollCollapse: true,
-          scroller: true
-        });
-
-        $('#datatable-fixed-header').DataTable({
-          fixedHeader: true
-        });
-
-        
+        $('#datatablepending').dataTable();
+               
       });
 </script>
 <!-- /Datatables -->
