--- a/WebApp/Views/DoctorAppointment/Index.cshtml
+++ b/WebApp/Views/DoctorAppointment/Index.cshtml
@@ -69,7 +69,7 @@
 
 
                     <div class="x_content">
-                        <div id="divUpcoming" class="table-responsive">
+                        <div id="divUpcoming" class="table table-striped table-bordered dataTable no-footer">
 
                             @{
                                 Html.RenderAction("PartialDoctorUpcoming", "DoctorAppointment");
@@ -84,7 +84,7 @@
 
 
                     <div class="x_content">
-                        <div id="divReschedule" class="table-responsive">
+                        <div id="divReschedule" class="table table-striped table-bordered dataTable no-footer">
 
                             @{
                                 Html.RenderAction("PartialDoctorReschedule", "DoctorAppointment");
@@ -100,7 +100,7 @@
 
 
                     <div class="x_content">
-                        <div id="divPending" class="table-responsive">
+                        <div id="divPending" class="table table-striped table-bordered dataTable no-footer">
 
                             @{
                                 Html.RenderAction("PartialDoctorPending", "DoctorAppointment");
