--- a/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
@@ -27,7 +27,7 @@
 else
 {
 
-    <table id="rescheduledatatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="rescheduledatatable" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
         <thead>
             <tr class="headings">
                 <th class="column-title" style="text-align:center">Patient Name </th>
@@ -62,7 +62,7 @@ else
                                     Action
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu dropdown-menu-right">
+                                <ul class="dropdown-menu dropdown-menu-left">
                                     <li><a href="#" data-toggle="modal" class="thumbnail-col-innerr" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
                                     <li><a href="#" class="cancelreschedule" data-id="@item.doctorID" id="@item.appID">Cancel Reschedule Req</a></li>
                                 </ul>
@@ -79,33 +79,8 @@ else
 <script>
     $(document).ready(function() {
 
-        $('#rescheduledatatable').dataTable({
-            'order': [[1, 'desc']],
-            columnDefs: [
-              { type: 'date-dd-mmm-yyyy', targets: 1 }
-            ]
-        });
-        $('#datatable-keytable').DataTable({
-            keys: true
-        });
-
-        $('#datatable-responsive').DataTable();
-
-        $('#datatable-scroller').DataTable({
-            ajax: "js/datatables/json/scroller-demo.json",
-            deferRender: true,
-            scrollY: 380,
-            scrollCollapse: true,
-            scroller: true
-        });
-
-        $('#datatable-fixed-header').DataTable({
-            fixedHeader: true
-        });
-
-
-
-        // TableManageButtons.init();
+        $('#rescheduledatatable').dataTable();
+      
     });
 </script>
 <!-- /Datatables -->
