--- a/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorUpcoming.cshtml
@@ -15,7 +15,7 @@
 else
 {
 
-    <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="datatable" class="table table-striped table-bordered" cellspacing="0" style="width:100%">
         <thead>
             <tr class="headings">
                 <th class="column-title" style="text-align:center">Patient Name </th>
@@ -60,7 +60,7 @@ else
                                 </a>
                                 
                                
-                                <ul class="dropdown-menu dropdown-menu-right">
+                                <ul class="dropdown-menu dropdown-menu-left">
                                     <li><a href="#" data-toggle="modal" class="thumbnail-upcoming" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
                                   
                                     <li><a href="#" class="reschedule" data-id="@item.doctorID" id="@item.appID">Reschedule Req</a></li>
