seperate doctore/patient create consult in respective controller so that authorize work perfect

--- a/WebApp/Views/Alert/Index.cshtml
+++ b/WebApp/Views/Alert/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
 
         <div class="x_content">
-            <div class="table-responsive" id="divAlert">
+            <div class="table table-striped table-bordered dataTable no-footer" id="divAlert">
                 @{
                     Html.RenderAction("PartialAlertView", "Alert");
                 }
